# crunch

./: .appveyor.yml  .azure-pipelines.yml  .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yml
crnlib/: CMakeLists.txt  crn_arealist.cpp  crn_assert.cpp  crn_assert.h  crn_buffer_stream.h  crn_cfile_stream.h  crn_checksum.cpp  crn_clusterizer.h  crn_colorized_console.cpp  crn_command_line_params.cpp  crn_comp.cpp  crn_comp.h  crn_console.cpp  crn_console.h  crn_data_stream.h  crn_data_stream_serializer.h  crn_dds_comp.cpp  crn_dds_comp.h  crn_dxt1.cpp  crn_dxt1.h  crn_dxt5a.cpp  crn_dxt5a.h  crn_dxt_endpoint_refiner.cpp  crn_dxt_endpoint_refiner.h  crn_dxt_fast.cpp  crn_dxt_hc.cpp  crn_dxt_hc.h  crn_dxt_image.cpp  crn_dxt_image.h  crn_dynamic_stream.h  crn_dynamic_string.cpp  crn_dynamic_string.h  crn_etc.cpp  crn_etc.h  crn_file_utils.cpp  crn_find_files.cpp  crn_hash.cpp  crn_hash_map.h  crn_helpers.h  crn_image.h  (+72 more)
crnlib/lzma/: Bcj2Enc.c  Ppmd7Enc.c
crunch/: CMakeLists.txt  corpus_test.cpp  crunch.1  crunch.cpp
emscripten/: CMakeLists.txt  Makefile  crunch_lib.cpp
example1/: CMakeLists.txt  example1.cpp  stb_image.h
example2/: example2.cpp  timer.cpp
example3/: CMakeLists.txt  example3.cpp
inc/: crn_decomp.h  crn_defs.h  crnlib.h  dds_defs.h
test/: checksums.tsv  raw-bottom-left.tga  raw-bottom-right.tga  raw-top-left.tga  raw-top-right.tga  rle-bottom-left.tga  rle-bottom-right.tga  rle-top-left.tga  rle-top-right.tga  test.py
